app/assets/stylesheets/application/panels/concepts/edit.css.scss
.button {
  float: left;
  font-size: 0.86em;
  line-height: 1em;
  padding: 3px 8px;
  color: white;
  display: inline-block;
  @include edit-button;

  &.big {
    padding-left: 2px;
    text-transform: uppercase;
    font-size: 0.8em;
    line-height: 1.5em;
    height: 12px;

    &:before {
      @include before-icon;
      float: left;
      height: 13px;
      background-position: -151px -304px;
    }
  }

  &.create-concept {
    @extend .big;
  }

  &.edit-concept {
    @extend .big;
    padding-left: 6px;
    position: absolute;
    left: 0;
    top: -30px;

    &:before {
      background-position: -152px -703px;
      margin-right: 3px;
    }
  }
}

.concept form {
  position: relative;

   .properties fieldset {
     position: relative;
     padding-top: 6px;
     border: 0;
     border-top: 1px solid white;
     &.required {
       h4:after {
         content: "*";
       }
     }

     h4 {
       padding-left: 40px;
       text-transform: uppercase;
       font-size: 0.8em;
     }
     .group {
       padding: 10px 4px 10px 60px;
       overflow: hidden;
       
       div.input {
         padding: 0;
       }
     }
     
     &.asset {
       div.asset-preview {
         img {
           height: 80px;
           width: auto;
         }
       }
       figcaption {
         font-size: 0.8em;
       }
       label {
         text-transform: uppercase;
         font-size: 0.8em;
         display:block;
       }
       input {
         margin:0px 0 10px 0;
       }
     }

     input[type="text"], textarea {
       float: left;
       margin-right: 16px;
     }

     input[type="radio"] {
       margin: 0 30px 0 5px;
     }

     ul li{
       list-style-type: none;
       padding-top: 2px;
       float: left;
       width: 33%;
     }

     label {
       display: inline-block;
       text-transform: capitalize;
       text-align: left;
       font-size: 0.9em;
       width: auto;
       padding:0;
       float: none;
     }

     &.asset .group .input.value{
       display: none;
     }
   }

   &.concept section div.edit, &.term .properties .edit {
     position: relative;
     background: none;
     margin: 0;
     width: auto;
     height: 16px;
     padding: 7px 8px;
     border-top: 1px solid white;
   }

   select, .coreon-select {
     margin: 3px 0 0 0px;
   }

   textarea {
     width: 65%;
     height: 50px;
   }

   input[type="text"] {
     height:24px;
     width: 40%;
   }

   .submit {
     text-align: right;
     clear: both;
     overflow: hidden;
     padding: 3px 10px;

     .cancel, .reset, button {
       @extend .button;
       margin: 6px;
       padding: 5px 8px 3px 8px;
       float: none;
       font-size: 1em;
     }

     button {
       @include box-sizing(content-box);
       border: 0;
       padding-bottom: 4px;
       &:after {
         @include before-icon;
         float: right;
         height: 12px;
         margin-left: 4px;
         background-position: -148px -56px;
       }

        &:disabled {
          &:hover {
            cursor: default;
          }
        }
      }
   }

   .disabled, button:disabled {
     cursor: default;
     @include opacity(0.5);
   }

   &.term, .term {
     position: relative;
     padding-top: 16px;
     border: none;
     margin-bottom: 20px;

     label {
       display: inline-block;
       text-transform: uppercase;
       text-align: right;
       font-size: 0.8em;
       float: left;
       width: 100px;
       padding-right: 20px;
       padding-top: 5px;
     }

     div.input {
       padding-bottom: 18px;
       padding-left: 60px;
     }

     .submit {
       margin-top: 1px;
     }

     .properties {
       padding:0;
       position: relative;
       background: none;

       fieldset {
         border-top: 1px solid white;
         background-color: rgba(white, 0.3);
       }

       h3 {
         padding: 1px 7px 0 5px;
         margin: 0;
         background: rgba(white, 0.3);
         &:before {
           content: none;
         }

         position: relative;
         left: 34px;
         top: 1px;
       }
     }
   }
}


form.create.term {
  clear: both;
  margin-bottom: 16px;
}


.concept.edit .broader-and-narrower {
  min-height: 44px;

  form {
    overflow: hidden;

    >div {
      margin-left: 32px;
    }

    .broader {
      padding-left: 5px;
    }

    .narrower {
      padding-right: 5px;
    }

    .submit {
      margin-top: 1px;
    }

    &.disabled {
      @include opacity(0.4);
    }

    ul .concept-label:hover {
      @include single-box-shadow(rgba($text-color, 0.4), 2px, 2px, 2px);
    }
  }
}

.concept  {

  .edit a, fieldset a {
   font-size: 0.9em;
   display: inline-block;
   position: relative;
   overflow: hidden;
   text-indent: -2000px;
   width: 16px;
   line-height: 19px;

   &:before {
     @include before-icon;
     float: left;
     margin-right: 5px;
     background-position: -151px -302px;
     @include edit-button;
   }

  }

  // all the buttons:

  a.remove-term, a.remove-property, a.delete-concept, a.remove-fieldset, a.remove-value {
   &:before {
     background-position: -149px -751px;
   };
  }

  a.edit-properties, a.edit-term, a.edit-connections {
   &:before {
     background-position: -150px -701px;
   }
  }

  a.add-term, a.add-property {
    width: auto;
    overflow: auto;
    text-indent: 10px;
  }

  &.new a.remove-term, a.remove-fieldset,  a.remove-property, a.add-value {
    position: absolute;
    top: 8px;
    left: 8px;
  }
  a.remove-property, a.add-value {
    top: 5px;
    }

  a.remove-value {
    position: absolute;
    left: 8px;
    margin-top: 3px;
  }
}

// for edit mode
.concept.show {
  .edit {
    display: none;
  }
}

.concept.edit {
  form, .broader-and-narrower {
    @include editmode;
  }


  // div.edit is for the left vertical block with all the edit buttons
  div.edit {
    width: 16px;
    padding: 5px 8px;

    a {
      margin-bottom: 1px;
      display: block;
    }
  }


  .concept-head div.edit, section div.edit {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
  }

  .terms >.add {
    clear: both;
    margin-bottom: 20px;

    .edit {
      min-height: 16px;
      padding: 8px;
    }

    a {
      position: absolute;
    }
  }

  &>section, form>section {
    &>h3, &>div:not(.add):last-child {
      margin-left: 38px;
    }

  }
  .concept-head {
    margin-left: 38px;
    div.edit {
      left: -38px;
    }
  }

  .button.edit-concept {
    color: $button-color;
    margin-left: -38px;
    &:before {
      background-position: -2px -703px;
    }
  }

  .language li.term {
    min-height: 44px;
    padding-left: 32px;
    h4 {
      padding-top: 14px;
    }
  }

  .term.delete {
    .value, .properties {
      @include opacity(0.4);
    }
  }

  .property.delete {
     @include opacity(0.6);
    >* {
      @include opacity(0.7);
    }

    &:before {
      @include before-icon;
      background-position: 0px -552px;
      position: absolute;
      left: 8px;
      top: 6px;
    }
    .remove-property {
      display: none;
    }
  }
  .group.delete {
     @include opacity(0.6);
    >* {
      @include opacity(0.7);
    }
    border-top: 1px solid white;
    .remove-value {
      display: none;
    }
    &:before {
      @include before-icon;
      background-position: 0px -552px;
      position: absolute;
      left: 8px;
      margin-top: 3px;
    }
  }
}

.concept.delete {
  &>* {
    @include opacity(0.4);
  }
  &>.edit {
      @include opacity(1);
  }
}


.medi {
  div.concept  {

    label {
      width: 90px;
      padding-right: 10px;
    }

    .properties fieldset {
      input[type="text"] {
        width: 60%;
      }
      div.input {
        padding: 0;
      }

      label {
        width: auto;
        padding:0;
      }
    }

    .error-message {
      padding-left: 100px;
    }

    .submit {
      font-size: 1.1em;
    }
  }
}

.mini {

  div.concept {

    label {
      padding: 0;
      text-align: left;
      float: none;
      display: block;
    }

    form .properties {
      .group {
         padding-left: 40px;
       }
       select, .coreon-select {
         margin-left: 0;
       }
       div.input {
         padding: 0;
       }

     }

    form {
      input[type="text"], textarea {
        width: 86%;
        margin-bottom: 6px;
      }

      ul li{
        width: 49%;
      }

    }

    .term {
      div.input {
        padding-left: 40px;
      }
    }

    .submit {
      font-size: 0.94em;
      padding-right: 5px;
      .cancel, .reset {
        margin: 3px;
      }
    }

    .error-message {
      padding-left: 0px;
      width:auto;
    }
  }
}

